--- a/src/app/main/feed/post-widget/likes/likes.component.html
+++ b/src/app/main/feed/post-widget/likes/likes.component.html
@@ -30,5 +30,5 @@
     />
   </svg>
   <!-- <h5 data-likes="post.item.likes">{{ post.item.likes }} Likes</h5> -->
-  <p class="w-regular">20 likes</p>
+  <p class="w-regular">{{ likes }} likes</p>
 </div>
