--- a/src/app/main/feed/post-widget/post-widget.component.html
+++ b/src/app/main/feed/post-widget/post-widget.component.html
@@ -1,5 +1,5 @@
 <div class="cont-post-widget">
-    <app-profile-info></app-profile-info>
-    <app-photo-text></app-photo-text>
-    <app-likes></app-likes>
+  <app-profile-info></app-profile-info>
+  <app-photo-text [captionAndPhotoData]="captionAndPhotoURL"></app-photo-text>
+  <app-likes [likes]="likes"></app-likes>
 </div>
