--- a/src/app/main/feed/feed.component.html
+++ b/src/app/main/feed/feed.component.html
@@ -1,4 +1,4 @@
-<div class="cont-feed">
-  <app-post-widget></app-post-widget>
+<div class="cont-feed" *ngFor="let post of postDataAsArray">
+  <app-post-widget [postData]="post"></app-post-widget>
   <app-comments-widget></app-comments-widget>
 </div>
