--- a/src/app/main/feed/post-widget/photo-text/photo-text.component.scss
+++ b/src/app/main/feed/post-widget/photo-text/photo-text.component.scss
@@ -5,13 +5,13 @@
   padding: 1rem 2rem;
   box-sizing: content-box;
   width: 90%;
-  object-fit: contain;
+  object-fit: cover;
   & > img {
-    // max-height: 20rem;
+    max-height: 20rem;
     width: 100%;
     height: 100%;
     image-rendering: auto;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 1rem;
   }
 }
@@ -40,6 +40,9 @@
     border-radius: 2rem;
     box-shadow: 0 0 0 99999px rgba(0, 0, 0, 0.6);
   }
+}
+.text-cont {
+  margin-bottom: 1rem;
 }
 @keyframes zoomin {
   0% {
