--- a/src/app/main/left-bar/left-bar.component.html
+++ b/src/app/main/left-bar/left-bar.component.html
@@ -1,5 +1,9 @@
 <div class="cont-pills">
-  <div class="cont-pill">
+  <div
+    class="cont-pill hover-light-grey"
+    id="home-button"
+    (click)="isHomeClicked(true)"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       height="20"
@@ -14,4 +18,50 @@
     </svg>
     <span class="pill-name">Home</span>
   </div>
+  <div class="cont-pill hover-light-grey">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      height="24"
+      width="24"
+      viewBox="0 0 512 512"
+    >
+      <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+      <path
+        fill="#000a02"
+        d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
+      />
+    </svg>
+    <span class="pill-name">Search</span>
+  </div>
+  <div class="cont-pill hover-light-grey">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      height="24"
+      width="21"
+      viewBox="0 0 448 512"
+    >
+      <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+      <path
+        fill="#000a04"
+        d="M181.3 32.4c17.4 2.9 29.2 19.4 26.3 36.8L197.8 128h95.1l11.5-69.3c2.9-17.4 19.4-29.2 36.8-26.3s29.2 19.4 26.3 36.8L357.8 128H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H347.1L325.8 320H384c17.7 0 32 14.3 32 32s-14.3 32-32 32H315.1l-11.5 69.3c-2.9 17.4-19.4 29.2-36.8 26.3s-29.2-19.4-26.3-36.8l9.8-58.7H155.1l-11.5 69.3c-2.9 17.4-19.4 29.2-36.8 26.3s-29.2-19.4-26.3-36.8L90.2 384H32c-17.7 0-32-14.3-32-32s14.3-32 32-32h68.9l21.3-128H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h68.9l11.5-69.3c2.9-17.4 19.4-29.2 36.8-26.3zM187.1 192L165.8 320h95.1l21.3-128H187.1z"
+      />
+    </svg>
+    <span class="pill-name">Explore</span>
+  </div>
+  <div class="cont-pill hover-light-grey">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      height="24"
+      width="21"
+      viewBox="0 0 448 512"
+    >
+      <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+      <path
+        fill="#000a04"
+        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"
+      />
+    </svg>
+    <span class="pill-name">Profile</span>
+  </div>
+  <button>Logout</button>
 </div>
