--- a/src/app/main/left-bar/left-bar.component.scss
+++ b/src/app/main/left-bar/left-bar.component.scss
@@ -1,6 +1,14 @@
 .cont-pills {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
+  padding: 1.5rem;
+}
+.cont-pill {
+  display: flex;
+  align-items: center;
+  justify-content: left;
   gap: 1rem;
-  padding: 1rem;
+  padding: 0.75rem 1.5rem;
+  border-radius: 30px;
 }
