--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,4 +10,5 @@
     </div>
   </div>
   <app-explore></app-explore>
+  <app-image-select [class.display-none]="!hideImageSelect"></app-image-select>
 </div>
