changed directory of reusabe components to shared folder

--- a/src/app/main/image-select/image-select.component.html
+++ b/src/app/main/image-select/image-select.component.html
@@ -9,6 +9,7 @@
     height="24"
     viewBox="0 -960 960 960"
     width="24"
+    (click)="onClickOfClose()"
   >
     <path
       d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"
