--- a/src/app/shared/feed/post-widget/photo/photo.component.html
+++ b/src/app/shared/feed/post-widget/photo/photo.component.html
@@ -4,6 +4,6 @@
     [attr.src]="photoURL"
     alt="photo"
     #image
-    (click)="onPhotoClick(image)"
+    (click)="onPhotoClick($event, image)"
   />
 </div>
