introduced bulma cdn

--- a/src/app/main/content-pane/content-pane.component.html
+++ b/src/app/main/content-pane/content-pane.component.html
@@ -1,5 +1,6 @@
 <app-icons-tab></app-icons-tab>
 <div class="cont-feed-section">
   <app-feed [postData]="data"></app-feed>
-  <!-- <app-feed></app-feed> -->
 </div>
+
+<!-- <h1>Hi There</h1> -->
