--- a/src/app/main/explore/follow-suggestion/follow-suggestion.component.html
+++ b/src/app/main/explore/follow-suggestion/follow-suggestion.component.html
@@ -1,6 +1,6 @@
 <div class="cont-suggestions">
-  <div class="title">
-    <h2 class="w-medium">People you might know</h2>
+  <div class="content m-0">
+    <h2 class="m-0">People you might know</h2>
   </div>
   <div class="cont-profiles">
     <div class="profile">
