--- a/src/app/main/explore/trending/trending.component.html
+++ b/src/app/main/explore/trending/trending.component.html
@@ -1,41 +1,59 @@
-<div class="cont-trending">
-  <ul class="trending-list">
-    <li class="trending">
-      <h2 class="w-regular w-bold">#Premier League</h2>
-      <p class="w-small">
-        Trending with
-        <span class="w-small green-color-font">#Haaland, #DeBruyne</span>
-      </p>
-    </li>
-    <li class="trending">
-      <h2 class="w-regular w-bold">#GOAT</h2>
-      <p class="w-small">
-        Trending with
-        <span class="w-small green-color-font">#GoldenBall, #Messi</span>
-      </p>
-    </li>
-    <li class="trending">
-      <h2 class="w-regular w-bold">#Griezmann</h2>
-      <p class="w-small">
-        Trending with
-        <span class="w-small green-color-font">#Underrated, #POTT</span>
-      </p>
-    </li>
-    <li class="trending">
-      <h2 class="w-regular w-bold">#Robbed</h2>
-      <p class="w-small">
-        Trending with
-        <span class="w-small green-color-font">#Barcelona, #Xavi</span>
-      </p>
-    </li>
-    <li class="trending">
-      <h2 class="w-regular w-bold">#VAR</h2>
-      <p class="w-small">
-        Trending with
-        <span class="w-small green-color-font"
-          >#ScandalInAnfield, #Liverpool</span
-        >
-      </p>
-    </li>
-  </ul>
+<div class="cont-media-content">
+  <div class="media m-0 p-1 px-2">
+    <div class="media-content">
+      <div class="content is-small">
+        <h4 class="m-1">#Premier League</h4>
+        <p class="w-small">
+          Trending with
+          <span class="w-small green-color-font">#Haaland, #DeBruyne</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="media m-0 p-1 px-2">
+    <div class="media-content">
+      <div class="content is-small">
+        <h4 class="m-1">#GOAT</h4>
+        <p class="w-small">
+          Trending with
+          <span class="w-small green-color-font">#GoldenBall, #Messi</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="media m-0 p-1 px-2">
+    <div class="media-content">
+      <div class="content is-small">
+        <h4 class="m-1">#Griezmann</h4>
+        <p class="w-small">
+          Trending with
+          <span class="w-small green-color-font">#Underrated, #POTT</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="media m-0 p-1 px-2">
+    <div class="media-content">
+      <div class="content is-small">
+        <h4 class="m-1">#Robbed</h4>
+        <p class="w-small">
+          Trending with
+          <span class="w-small green-color-font">#Barcelona, #Xavi</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="media m-0 p-1 px-2">
+    <div class="media-content">
+      <div class="content is-small">
+        <h4 class="m-1">#VAR</h4>
+        <p class="w-small">
+          Trending with
+          <span class="w-small green-color-font"
+            >#ScandalInAnfield, #Liverpool</span
+          >
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
