--- a/src/app/shared/feed/post-widget/profile-info/profile-info.component.html
+++ b/src/app/shared/feed/post-widget/profile-info/profile-info.component.html
@@ -5,8 +5,8 @@
       alt="dp"
     />
   </div>
-  <div class="cont-names">
-    <h2 class="display-name w-regular">Bhavani</h2>
-    <p class="username w-small">@bhavanishankar</p>
+  <div class="cont-names content is-small">
+    <h2 class="m-0">Bhavani</h2>
+    <p class="m-0">@bhavanishankar</p>
   </div>
 </div>
