--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -14,5 +14,6 @@ $color-grey-light: #dee2e6;
 $color-grey-lighter: #f1f3f5;
 $color-grey-lightest: #f8f9fa;
 $color-grey-dark: #868e96;
+$color-grey-extra-dark: #343a40;
 $color-linear-gradient: linear-gradient(#24e321, teal);
 $color-red: #e03131;
