--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -5,6 +5,15 @@
   background: #24e321;
   color: #fff;
 }
+.grey-dark {
+  color: $color-grey-dark;
+}
+.grey-extra-dark {
+  color: $color-grey-extra-dark;
+}
+.grey-dark {
+  color: $color-grey-dark;
+}
 .green-font {
   font-family: $cursive-green-font-family; //global
   color: $color-green;
