--- a/src/app/main/left-bar/left-bar.component.html
+++ b/src/app/main/left-bar/left-bar.component.html
@@ -3,6 +3,7 @@
     class="cont-pill hover-light-grey"
     id="home-button"
     (click)="isHomeClicked(true)"
+    [routerLink]="['/home']"
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -48,7 +49,7 @@
     </svg>
     <span class="pill-name">Explore</span>
   </div>
-  <div class="cont-pill hover-light-grey">
+  <div class="cont-pill hover-light-grey" [routerLink]="['/profile']">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       height="24"
