--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 @import "./abstracts/mixins";
 @import "./abstracts/placeholders";
 @import "./abstracts/variables";
-
+// @import "https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css";
 @import "./base/base";
 @import "./base/typography";
 
