--- a/src/app/shared/feed/post-widget/post-widget.component.scss
+++ b/src/app/shared/feed/post-widget/post-widget.component.scss
@@ -6,10 +6,10 @@
   width: 100%;
 }
 .cont-post-widget:hover :not(.hover-excluded) {
-  // background-color: #fcfcfc;
-  // background-color: #eedea2;
   cursor: pointer;
 }
 .photo-caption-cont {
-  width: 100% !important;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
