--- a/src/app/shared/icons-tab/icons-tab.component.html
+++ b/src/app/shared/icons-tab/icons-tab.component.html
@@ -1,6 +1,6 @@
 <div class="cont-icons-tab" *ngIf="!writeSomethingSelected">
   <ul class="list-icons">
-    <li class="icon icon-write-something">
+    <li class="icons icon-write-something">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         height="48"
@@ -14,7 +14,7 @@
         />
       </svg>
     </li>
-    <li class="icon icon-post-something">
+    <li class="icons icon-post-something">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         height="48"
@@ -28,7 +28,7 @@
         />
       </svg>
     </li>
-    <li class="icon icon-refresh">
+    <li class="icons icon-refresh">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         height="48"
