--- a/src/app/main/profile/details/details.component.html
+++ b/src/app/main/profile/details/details.component.html
@@ -102,6 +102,7 @@
             class="input"
             type="text"
             placeholder=""
+            title="Name"
             value="Bhavani Shankar"
           />
         </div>
